sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:5: error: not found: value swipped
while (swipped)
       ^AlgBubbleSort2:6: error: not found: value swipped
swipped = false
^